--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,11 +5,11 @@
     margin-right: 15px;
 } /* NavBar Styling */
 
-main {
+body {
     height: 100%;
     background-image: url("../img/book-bg.png");
     background-repeat: repeat-y;
-    background-size: 100%;
+    background-size: cover;
 } /* BG Image */
 
 .quote {
