--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,8 +8,9 @@
 body {
     height: 100%;
     background-image: url("../img/book-bg.png");
-    background-repeat: repeat-y;
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: #678F94
 } /* BG Image */
 
 .quote {
