google font imported

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Courgette:100, 200, 300, 400, 500, 600, 700, 800');
+
 #navbarColor03 ul li a {
     font-family: "Apple Chancery", sans-serif;
     font-size: 20px;
