--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,16 +53,21 @@ body{
     letter-spacing: 2px;
     padding: 15px;
     margin: 5px;
+    text-align: center;
+}
+
+.wrap {
+    border: 1px solid #fff;
+    border-radius: 15%;
 }
 
 .bookPic {
-   float: left;
+    width:20%;
+    text-align: center;
 }
 
-..title {
-   display: inline;
-   padding-left: 0;
-   margin-left: 0;
-   width: 50%;
+li {
+    list-style: none;
 }
+
 
