--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,14 +56,16 @@ body{
     text-align: center;
 }
 
-.wrap {
+ul {
     border: 1px solid #fff;
     border-radius: 15%;
+    margin: 5px;
 }
 
 li {
     list-style: none;
     text-align: center;
 }
+
 
 
