jQuery added to hide quote image and show book results once search button is clicked

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,10 @@ body{
 }
 
 /* Search Results Area */
+.hiddenUntil {
+    visibility: hidden;
+}
+
 
 .searchHeader {
     font-family: 'Courgette', Apple Chancery;
