--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,9 @@ body{
     background-repeat: repeat-y;
 } /* BG Image */
 
+.input-group {
+    height: 20px;
+}
 .quote {
     background-image: url("../img/quote.png");
     background-size: contain;
@@ -32,6 +35,7 @@ body{
     visibility: visible;
 }
 
+
 /* Search Results Area */
 .hiddenUntil {
     visibility: hidden;
@@ -39,7 +43,7 @@ body{
 
 
 .searchHeader {
-    font-family: 'Courgette', Apple Chancery;
+    font-family: "Courgette", Apple Chancery;
     font-weight: 700;
     color: #fff;
     text-align: center;
@@ -61,7 +65,6 @@ body{
 
 .desc {
     clear: both;
-    padding: 5px;
     text-align: justify;
 } /* Allows the book description to not have anything else either side of it */
 
@@ -87,6 +90,13 @@ body{
 }
 
 /* Media Queries */
+
+@media (min-width:360px) {
+    .desc {
+        padding: 40px 45px;
+    } /* padding added to book description text */
+}
+
 @media (max-width:991px) {
     .bookPic {
     text-align: center;
