--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body{
     background-size: 100%;
     background-position: contain;
     background-color: #678F94;
-    background-repeat: repeat-y;
+    background-attachment: fixed;
 } /* BG Image */
 
 .input-group {
