--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,27 @@ body{
     margin-bottom: 0px;
 }
 
+/* Footer Area */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color:#E99765;
+    letter-spacing: 2px;
+    
+}
+
+footer p {
+    color: #fff;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+
+
 /* Media Queries */
 
 @media (min-width:360px) {
