--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,7 +90,7 @@ body{
 
 /* Footer Area */
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 30px;
