--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,12 +63,12 @@ body{
 
 .desc {
     clear: both;
-    text-align: justify;
+    text-align: center;
 } /* Allows the book description to not have anything else either side of it */
 
 .arrayReturn {
     border: 1px solid #fff;
-    border-radius: 5%;
+    border-radius: 25px;
     background-color:#648C91;
 }
 
@@ -109,12 +109,26 @@ footer p {
 }
 
 /* Pagination */
-.nxt {
-    float: right;
+button.nxt {
+  color:#fff;
+  font-family: 'Lato', sans-serif;
+  float: right;
+  background-color: #678F94;
+  border: 1px solid #000;
+  border-radius: 25px;
+  padding: 10px;
+  margin: 10px;
 }
 
-.prev {
-    float: left;
+button.prev {
+  color:#fff;
+  font-family: 'Lato', sans-serif;
+  float: left;
+  background-color: #678F94; 
+  border: 1px solid #000;
+  border-radius: 25px;
+  padding: 10px;
+  margin: 10px;
 }
 
 
@@ -154,6 +168,8 @@ footer p {
         transform: translateX(-50px);
     } /* Title, author & rating are moved horizontantly to the left on screen sizes 1280px and above */
 }
+
+
 
 
 
