--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,7 @@ body{
     color: #fff;
     text-align: center;
     padding: 20px;
+    margin: 10px;
 } /* Search Results Header */
 
 #output {
