--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,8 @@ body{
 
 .desc {
     clear: both;
+    padding: 8px;
+    text-align: center;
 } /* Allows the book description to not have anything else either side of it */
 
 
@@ -77,7 +79,6 @@ body{
 footer {
     position: fixed;
     bottom: 0;
-    background-color: rgb(255, 255, 255,.6);
     width: 100%;
     height: 30px;
     letter-spacing: 2px;
