--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,8 +68,6 @@ body{
     text-align: center;
 } /* Allows the book description to not have anything else either side of it */
 
-
-
 .arrayReturn {
     border: 1px solid #fff;
     border-radius: 25px;
@@ -90,16 +88,16 @@ footer {
     bottom: 0;
     width: 100%;
     height: 30px;
+    background-color: #678F94;
     letter-spacing: 2px;
-    opacity:0.9;
-    margin-top: 20px;
 } /* Footer styling */
 
 footer p {
-    color: #000;
+    color: #fff;
     font-family: 'Lato', sans-serif;
     text-align: center;
     margin: auto;
+    padding: 0 15px;
 } /* Footer text styling */
 
 /* Pagination Buttons */
@@ -140,6 +138,10 @@ button.prev:hover {
     background-color:black;
     transition-duration: .5s;
 }
+
+button.bottombtn {
+    margin-bottom: 50px;
+} /* increases the space between the bottom buttons and the footer 
 
 /* Media Queries */
 @media (max-width:991px) {
